--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <title>Página Inicial</title>
+    <style>
+        /* Reset CSS básico */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Estilos personalizados para o seu portfólio */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+
+        header {
+            background-color: #007bff;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1, p {
+            margin: 20px;
+        }
+
+        select {
+            display: block;
+            margin: 20px auto;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+            margin-top: 125px; /* Adicionada margem superior para afastar do texto "Experiências" */
+        }
+
+        .container {
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .bio {
+            margin-bottom: 10px;
+        }
+
+        .bio p {
+            text-align: left; /* Alinha o texto da biografia à esquerda */
+        }
+
+        .experiencias {
+            margin-top: 40px;
+        }
+
+        .experiencias h3 {
+            margin-bottom: 10px;
+        }
+
+        .experiencias ul {
+            margin-top: 20px; /* Adiciona margem acima da lista de experiências */
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
+        .qualificacao {
+            margin-bottom: 20px; /* Adicionado espaçamento entre a seção de "Qualificação" e a foto */
+        }
+
+        .qualificacao ul {
+            margin-top: 20px;
+            list-style-type: none;
+            padding: 0;
+        }
+
+    </style>
     <script>
         // função para redirecionar para a página selecionada
         function redirecionarParaPagina() {
@@ -12,9 +98,11 @@
     </script>
 </head>
 <body>
-    <h1>Bem-vindo à página</h1>
-    <p>Esta é uma página HTML básica em português.</p>
-    
+
+<header>
+    <h1>Portfólio Laura Intrieri</h1>
+</header>
+<div>
     <!-- Dropdown menu para seleção das páginas -->
     <select id="menuPaginas" onchange="redirecionarParaPagina()">
         <option value="">Selecione uma Página</option>
@@ -22,6 +110,36 @@
         <option value="/projetos">Projetos (GitHub)</option>
         <option value="/publicacoes">Publicações</option>
     </select>
+</div>
+<!-- Conteúdo envolvido em uma div com classe container -->
+<div class="container">
+    <div class="bio">
+        <h2>Sobre</h2>
+        <p>Sou jornalista e atuo como repórter de ciência e tecnologia no Terra. Antes, colaborei com Agência Estado, Money Times e Suno Notícias. Tenho experiência na cobertura de mercados, economia, política, ciência e tecnologia.</p>
+        <img src="https://media.licdn.com/dms/image/C4D03AQG2knNr3SNbxQ/profile-displayphoto-shrink_800_800/0/1655394259309?e=1717027200&v=beta&t=LlDxhg-oLaRxRqnMvzAf2VqMS1-uRv9Wc1XxIjtncIA" alt="Foto Laura Intrieri" width="300">
+    </div>
+    <div class="qualificacao">
+        <h2>Qualificação</h2>
+        <ul>
+            <li>2023 a 2024 - Master em Jornalismo de Dados e Automação | Insper.</li>
+            <li>2018 a 2022 - Bacharelado em Administração Pública | FGV.</li>
+        </ul>
+    </div>
+
+    <div class="experiencias">
+        <h2>Experiências</h2>
+        <ul>
+            <li>Repórter de ciência e tecnologia | Terra <b>outubro de 2022 - atualmente </b></li>
+            <li>Freelancer na cobertura de balanços | Agência Estado <b>julho de 2022 - novembro de 2022</b> </li>
+            <li>Repórter | Suno Notícias <b> agosto de 2022 a outubro de 2022</b></li>
+            <li>Estagiária de jornalismo | Money Times <b>dezembro de 2021 a junho de 2022</b></li>
+            <li>Repórter | Gazeta Vargas <b>julho de 2020 a janeiro de 2022</b></li>
+        </ul>
+    </div>
+    
+<footer>
+    <p>&copy; 2024 Laura Intrieri</p>
+</footer>
 
 </body>
 </html>
