--- a/templates/infos.html
+++ b/templates/infos.html
@@ -3,6 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>Informações</title>
+    <style>
+        /* Reset CSS básico */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Estilos personalizados para o seu portfólio */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+
+        header {
+            background-color: #007bff;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1, p {
+            text-align: center;
+            margin: 20px; /* Espaçamento de 20 pixels */
+        }
+
+        select {
+            display: block;
+            margin: 20px auto;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+    </style>
     <script>
         function redirecionarParaPagina() {
             var pagina = document.getElementById("menuPaginas").value;
@@ -11,14 +54,22 @@
     </script>
 </head>
 <body>
-    <h1>Informações de Contato</h1>
-    <p>Detalhes de contato vão aqui.</p>
-    
-    <select id="menuPaginas" onchange="redirecionarParaPagina()">
-        <option value="">Selecione uma Página</option>
-        <option value="/">Página Inicial</option>
-        <option value="/projetos">Projetos (GitHub)</option>
-        <option value="/publicacoes">Publicações</option>
-    </select>
+<header>
+    <h1>Informações para contato</h1>
+    <p>(+55) 12 99744 2033</p>
+    <p>lab.intrieri@gmail.com</p>
+    <p></p>
+</header>
+
+<select id="menuPaginas" onchange="redirecionarParaPagina()">
+    <option value="">Selecione uma Página</option>
+    <option value="/">Página Inicial</option>
+    <option value="/publicacoes">Publicações</option>
+    <option value="/projetos">Projetos (GitHub)</option>
+</select>
+
+<footer>
+    <p>&copy; 2024 Laura Intrieri</p>
+</footer>
 </body>
 </html>
