--- a/templates/publicacoes.html
+++ b/templates/publicacoes.html
@@ -3,6 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>Publicações</title>
+    <style>
+        /* Reset CSS básico */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Estilos personalizados para o seu portfólio */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+
+        header {
+            background-color: #007bff;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1, p {
+            text-align: center;
+            margin: 20px;
+        }
+
+        select {
+            display: block;
+            margin: 20px auto;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+    </style>
     <script>
         function redirecionarParaPagina() {
             var pagina = document.getElementById("menuPaginas").value;
@@ -11,8 +54,10 @@
     </script>
 </head>
 <body>
-    <h1>Minhas Publicações na Imprensa</h1>
-    <p>Lista de minhas publicações.</p>
+    <header>
+        <h1>Reportagens</h1>
+        <p>Textos que publiquei nos últimos meses no <i>Terra</i>, <i>Money Times</i> e <i>Suno Notícias</i></p>
+    </header>
     
     <select id="menuPaginas" onchange="redirecionarParaPagina()">
         <option value="">Selecione uma Página</option>
@@ -20,6 +65,130 @@
         <option value="/infos">Informações</option>
         <option value="/projetos">Projetos (GitHub)</option>
     </select>
+    <div style="text-align: left;">
+
+        <h3>
+            <a href="https://www.terra.com.br/byte/por-que-biometria-tornou-se-a-nova-fronteira-na-guerra-de-dados,01defb4f327c35018da5a4ea36a8457aig4o1bzt.html">
+              Por que a biometria tornou-se a nova fronteira na guerra de dados
+            </a>
+        </h3>
+      
+        <h5>
+          Impressões digitais e padrões de íris tornam-se chaves do futuro digital, mas trazem consigo desafios éticos, legais e riscos de privacidade
+        </h5>
+      
+        <img src="https://p2.trrsf.com/image/fget/cf/774/0/images.terra.com/2023/09/22/identification-scanning-system-skxuu8z5djz6.jpg" alt="Imagem da biometria" width="300" height="225">
+
+        <h3>
+              <a href="https://www.terra.com.br/byte/cerebros-podem-ser-um-dos-ultimos-orgaos-a-se-decompor-afirma-estudo,404310642be195251fdfd285f92e7377icogwpmi.html">
+                Cérebros podem ser um dos últimos órgãos a se decompor, afirma estudo
+              </a>
+          </h3>
+        
+          <h5>
+            Restos analisados vão desde sepulturas massivas da Guerra Civil Espanhola até vítimas de sacrifícios rituais Incas
+          </h5>
+        
+          <img src="https://p2.trrsf.com/image/fget/cf/774/0/images.terra.com/2024/03/22/cerebro-1k1wqqc9uvlmb.jpg" alt="Imagem da biometria" width="300" height="225">
+      
+          <h3>
+            <a href="https://www.terra.com.br/byte/oppenheimer-conheca-consultores-de-ciencia-do-vencedor-do-oscar,225ed8584118d22424d564137412bb49kxvbmg66.html">
+                Oppenheimer: conheça consultores de ciência do vencedor do Oscar
+            </a>
+        </h3>
+      
+        <h5>
+            Especialistas contribuíram para dar fidelidade aos eventos históricos e científicos retratados no longa dirigido por Christopher Nolan
+        </h5>
+      
+        <img src="https://p2.trrsf.com/image/fget/cf/774/0/images.terra.com/2023/07/18/whatsapp-image-2023-07-18-at-15-55-38-uv8nsl2g10l5.jpeg" alt="Imagem da biometria" width="300" height="225">
+      
+        <h3>
+            <a href="https://www.terra.com.br/byte/ceo-de-farmaceutica-afirma-ter-criado-primeiro-medicamento-de-ia,d2eb9122dd802bc8d2a48fc124083a093tblzsyd.html">
+                CEO de farmacêutica afirma ter criado primeiro "medicamento de IA"
+            </a>
+        </h3>
+      
+        <h5>
+            Artigo descreve como o software de IA sugeriu alvo e estrutura de novo composto
+        </h5>
+      
+        <img src="https://p2.trrsf.com/image/fget/cf/774/0/images.terra.com/2024/02/06/national-cancer-institute-e9ucfek-lp0-unsplash-t4w6u90j7ad5.jpg" width="300" height="225">
+    
+        <h3>
+            <a href="https://www.moneytimes.com.br/favelado-investidor-vai-direcionar-conteudos-para-ajudar-a-quebrada-investir-em-criptoativos-e-no-exterior/">
+                Favelado Investidor vai direcionar conteúdos para ajudar a quebrada investir em criptoativos e no exterior
+            </a>
+        </h3>
+      
+        <h5>
+           Murilo Duarte tem mais de 340 mil inscritos no YouTube
+        </h5>
+      
+        <img src="https://media.moneytimes.com.br/uploads/2022/01/destaque-site-favela.png" width="300" height="225">
+    
+        <h3>
+            <a href="https://www.suno.com.br/noticias/resgates-fundos-credit-suisse-aumentam-10-vezes-crise/">
+                Resgates em fundos do Credit Suisse aumentaram mais de 10 vezes com crise
+            </a>
+        </h3>
+      
+        <h5>
+           CEO do banco admitiu que instituição vive "momento crítico"
+        </h5>
+      
+        <img src="https://files.sunoresearch.com.br/n/uploads/2022/10/Credit-Suisse-800x450.jpg" width="300" height="225">
+        <h3>
+            <a href="https://www.terra.com.br/diversao/carnaval/escolas-de-samba-devem-demorar-para-incorporar-inteligencia-artificial-no-carnaval,a7e6c1a106d4ce74d2bcdfcd119868c3ouk2muaa.html/">
+                Escolas de samba devem demorar para incorporar inteligência artificial no Carnaval
+            </a>
+        </h3>
+      
+        <h5>
+            Carnavalescos se dividem entre uso moderado e rejeição à tecnologia queridinha de outros megaeventos
+        </h5>
+      
+        <img src="https://p2.trrsf.com/image/fget/cf/774/0/images.terra.com/2024/01/30/52705405096_4a71dcd120_o-t81d5u54ejxf.jpg" width="300" height="225">
+       
+        <h3>
+            <a href="https://www.terra.com.br/byte/cientistas-usam-ia-para-melhorar-sabor-de-cerveja-veja-resultado,cb6abc23e7e32573de8359c50722d9565ww9fdki.html">
+                Cientistas usam IA para melhorar sabor de cerveja; veja resultado
+            </a>
+        </h3>
+      
+        <h5>
+            Conjunto de dados foi utilizado para treinar 10 modelos que conseguiram prever com precisão gosto, cheiro e textura das bebidas
+        </h5>
+      
+        <img src="https://p2.trrsf.com/image/fget/cf/774/0/images.terra.com/2024/03/26/teo-do-rio-euo7l470lxk-unsplash-t89mx7ags5ro.jpg" width="300" height="225">
+    
+        <h3>
+            <a href="https://www.terra.com.br/byte/estudo-sugere-uso-intencional-de-planta-alucinogena-na-era-romana,d6eb970e99ee289d5492e31f34c6d7dfdlfnas9w.html">
+                Estudo sugere uso intencional de planta alucinógena na era romana
+            </a>
+        </h3>
+      
+        <h5>
+            Sementes de meimendro-negro, também utilizadas por suas propriedades medicinais, foram descobertas em escavações na Holanda
+        </h5>
+      
+        <img src="https://p2.trrsf.com/image/fget/cf/774/0/images.terra.com/2024/03/21/alucinogenos-1-1iv1j0qghc3zr.jpeg" width="300" height="225">
+        
+        <h3>
+            <a href="https://www.terra.com.br/byte/conheca-a-mancha-vermelha-de-jupiter-tempestade-que-dura-mais-de-300-anos,d3ebc245bdb1179ae484755744e2d359w41l0zv5.html#google_vignette">
+                Conheça a mancha vermelha de Júpiter, tempestade que dura mais de 300 anos
+            </a>
+        </h3>
+      
+        <h5>
+            Tempestade gigante no planeta intriga cientistas e pode ser vista até por telescópios amadores da Terra
+        </h5>
+      
+        <img src="https://p2.trrsf.com/image/fget/cf/774/0/images.terra.com/2024/03/20/mancha-jupiter-s504qk0nmgq9.jpeg" width="300" height="225">
+    
+        </div>
+    <footer>
+        <p>&copy; 2024 Laura Intrieri</p>
+    </footer>
 </body>
 </html>
-
