--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,10 @@
             <option value="/carlazambelli">Carla Zambelli</option>
             <option value="/eduardobolsonaro">Eduardo Bolsonaro</option>
             <option value="/ricardosalles">Ricardo Salles</option>
+            <option value="/delegadobrunolima">Delegado Bruno Lima</option>
+            <option value="/kimkataguiri">Kim Kataguiri</option>
+            <option value="/luizcarloshauly">Luiz Carlos Hauly</option>
+            <option value="/celsorusomanno">Celso Russomanno</option>
         </select>
     </section>
     
