--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
             <option value="/delegadobrunolima">Delegado Bruno Lima</option>
             <option value="/kimkataguiri">Kim Kataguiri</option>
             <option value="/luizcarloshauly">Luiz Carlos Hauly</option>
-            <option value="/celsorusomanno">Celso Russomanno</option>
+            <option value="/celsorussomanno">Celso Russomanno</option>
         </select>
     </section>
     
